# vlm_in_a_box

./: .gitignore  .gitmodules  Makefile  pyproject.toml
.github/workflows/: python-package.yaml
src/vlm/: __init__.py  cli.py  config.py  main.py
src/vlm/anyvar/: __init__.py  base_client.py
src/vlm/functions/: __init__.py  get_caf.py  ingest_vcf.py
src/vlm/restapi/: __init__.py  deps.py  vlm.py
src/vlm/schemas/: __init__.py  common.py  domain.py  vlm.py
tests/: conftest.py
tests/unit/: test_restapi.py
